[gd_scene load_steps=5 format=3 uid="uid://y0534wvkjjp0"]

[ext_resource type="Script" path="res://world.gd" id="1_skele"]
[ext_resource type="Texture2D" uid="uid://1fm54snyolfa" path="res://Images/Background.png" id="2_4esug"]
[ext_resource type="Texture2D" uid="uid://el2k8bfwhw56" path="res://Images/Money.png" id="3_gx442"]

[sub_resource type="GDScript" id="GDScript_5wr7h"]

[node name="World" type="Node2D"]
script = ExtResource("1_skele")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]

[node name="Background" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer/Sprite2D"]
scale = Vector2(0.6, 0.6)
texture = ExtResource("2_4esug")
centered = false

[node name="Money" type="Sprite2D" parent="."]
position = Vector2(91, 39)
scale = Vector2(0.551546, 0.247423)
texture = ExtResource("3_gx442")

[node name="Money Value" type="Label" parent="."]
offset_left = 38.0
offset_top = 16.0
offset_right = 144.0
offset_bottom = 61.0
theme_override_colors/font_color = Color(1, 0.878431, 0, 1)
theme_override_font_sizes/font_size = 26
text = "500"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Buy Warrior" type="Button" parent="."]
offset_left = 944.0
offset_top = 47.0
offset_right = 1145.0
offset_bottom = 126.0
text = "Buy Warrior 100"
script = SubResource("GDScript_5wr7h")

[node name="Main Menu Button" type="Button" parent="."]
offset_left = 1086.0
offset_top = 7.0
offset_right = 1145.0
offset_bottom = 39.0
text = "Quit"

[node name="Caveman Enemy Spawn Timer" type="Timer" parent="."]

[connection signal="pressed" from="Buy Warrior" to="." method="_on_buy_warrior_pressed"]
[connection signal="pressed" from="Main Menu Button" to="." method="_on_main_menu_button_pressed"]
[connection signal="timeout" from="Caveman Enemy Spawn Timer" to="." method="_on_caveman_enemy_spawn_timer_timeout"]
